# lietorch

./: .gitmodules  README.md  pyproject.toml  setup.py
examples/pgo/: main.py
lietorch/: gradcheck.py  group_ops.py  groups.py  run_tests.py
lietorch/extras/: se3_builder.cu  se3_inplace_builder.cu
lietorch/include/: dispatch.h  lietorch_cpu.h  lietorch_gpu.h  rxso3.h  se3.h  sim3.h  so3.h
lietorch/src/: lietorch.cpp  lietorch_cpu.cpp  lietorch_gpu.cu
