[build-system]
requires = ["setuptools", "torch", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "lietorch"
version = "0.3" 
description = "Lie Groups for PyTorch"
authors = [
    { name="Zachary Teed", email="zachteed@gmail.com" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
]
